<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="Question_text">QUESTION</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button"> NEXT >></string>
    <string name="prev_button">Previous Question</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="vieLeng">Vietnamese</string>
    <string name="engLeng">English</string>

    <!-- Actual Questions -->
    <string name="question_oceans">1.The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">5.The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">2.The source of the Nile River is in Egypt.</string>
    <string name="question_americas">4.The Amazon River is the longest river in the Amerias.</string>
    <string name="question_asia">3.Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="displayMode">DISPLAY MODE</string>
    <string name="darkmode">Dark Mode</string>
    <string name="lightmode">Light Mode</string>
    <string name="languageMode">LANGUAGE</string>

</resources>