<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    tools:context=".MainActivity">
<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_id"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:title="HOME"
        app:menu="@menu/menu"
        app:titleCentered="true">

    </com.google.android.material.appbar.MaterialToolbar>
</com.google.android.material.appbar.AppBarLayout>
    <ImageView
        android:id="@+id/setting"
        android:layout_gravity="end"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:src="@drawable/ic_baseline_settings_24" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Question_text"
        android:textSize="32dp"
        android:layout_marginTop="150dp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/question_oceans" />

    <LinearLayout

        android:id="@+id/TrueFalesOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageButtonTrue"
            android:layout_width="103dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/true_bt"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageButtonFalse"
            android:layout_width="103dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/false_bt"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <CheckBox
        android:visibility="gone"
        android:id="@+id/checkBox"
        android:layout_marginHorizontal="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="answer 1" />
    <CheckBox
        android:visibility="gone"
        android:id="@+id/checkBox1"
        android:layout_marginHorizontal="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="answer 1" />
    <CheckBox
        android:visibility="gone"
        android:id="@+id/checkBox2"
        android:layout_marginHorizontal="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="answer 1" />


    <Button
        android:id="@+id/nextButton"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/next_button"
        android:textSize="20sp">


    </Button>


</LinearLayout>